--- a/study-app/src/App/App.css
+++ b/study-app/src/App/App.css
@@ -10,6 +10,10 @@
     row-gap: 2%;
     border-radius: 10%
 }
+.btn-group {
+    display:flex;
+    justify-content:center;
+}
 
 .card {
    padding: 2%;
