--- a/study-app/src/App/App.css
+++ b/study-app/src/App/App.css
@@ -22,19 +22,22 @@
     display:flex;
     justify-content:center;
 }
+/* 
+h2 {
+    margin: 50px;
+} */
 
 .card {
    padding: 2%;
    width: 100%;
-   max-width: 500px;
    background-color: #F5F5F5;
    border-radius: 6%;
 }
 #card1{
     grid-column-start: 1;
     grid-column-end: 1;
-    grid-row-start: 2;
-    grid-row-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 5;
 }
 
 #card2{
