--- a/study-app/src/App/App.css
+++ b/study-app/src/App/App.css
@@ -6,10 +6,11 @@
     width: 90%;
     height: 100%;
     margin: 5%;
+    margin-top: 2%;
     padding: 2%;
     column-gap: 1%;
     row-gap: 2%;
-    border-radius: 3%
+    border-radius: 1%
 }
 .header-container{
     background-color: #9686AC;
@@ -32,7 +33,7 @@ h2 {
 }
 
 h4 {
-    padding:1%;
+    padding:0.75%;
     color: #3D5051
 }
 .card {
@@ -40,7 +41,7 @@ h4 {
    width: 100%;
    height: 100%;
    background-color: #F5F5F5;
-   border-radius: 2%;
+   border-radius: 1.5%;
 }
 #card1{
     grid-column-start: 1;
