--- a/study-app/src/App/App.css
+++ b/study-app/src/App/App.css
@@ -1,103 +1,131 @@
 body {
-    font-family: 'Mulish', serif;
-  }
-  /* "Segoe UI" */
+  font-family: "Mulish", serif;
+}
+/* "Segoe UI" */
 
 .List {
-    background-color: #C6C9E7;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 30px 5fr 5fr 5fr;
-    width: 90%;
-    height: 100%;
-    margin: 5%;
-    margin-top: 2%;
-    padding: 2%;
-    column-gap: 1%;
-    row-gap: 2%;
-    border-radius: 1%;
-    padding-top: 1%;
+  background-color: #c6c9e7;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 30px 5fr 5fr 5fr;
+  width: 90%;
+  height: 100%;
+  margin: 5%;
+  margin-top: 2%;
+  padding: 2%;
+  column-gap: 1%;
+  row-gap: 2%;
+  border-radius: 1%;
+  padding-top: 1%;
 }
-.header-container{
-    background-color: #9686AC;
+.header-container {
+  background-color: #9686ac;
 }
 
 .nav-link {
-    color: white;
+  color: white;
 }
 
 .title {
-    display:flex;
-    justify-content:center;
-    color: white;
+  display: flex;
+  justify-content: center;
+  color: white;
 }
 
 .btn-group {
-    display:flex;
-    justify-content:center;
+  display: flex;
+  justify-content: center;
 }
 
 .dropdown-menu {
-    font-size: 1.5em;
-    min-width: 100%;
-    text-align: center;
+  font-size: 1.5em;
+  min-width: 100%;
+  text-align: center;
 }
 
 .timebutton {
-position:absolute;
-right: 5px;
-bottom: 5px;
-background-color:#9686AC ;
-color: white;
-border-radius: 50%;
-font-size: 0.6em;
-padding: 1.75%;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  background-color: #9686ac;
+  color: white;
+  border-radius: 50%;
+  font-size: 0.6em;
+  padding: 1.75%;
 }
 
 h2 {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    color: #3D5051;
-    font-size: 1.75em;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  color: #3d5051;
+  font-size: 1.75em;
 }
 
 h4 {
-    padding:0.75%;
-    color: #3D5051
+  padding: 0.75%;
+  color: #3d5051;
 }
 
 .card {
-   padding: 2%;
-   width: 100%;
-   height: 100%;
-   background-color: #F5F5F5;
-   border-radius: 1.5%;
+  padding: 2%;
+  width: 100%;
+  height: 100%;
+  background-color: #f5f5f5;
+  border-radius: 1.5%;
 }
 
 #card1 {
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 2;
-    grid-row-end: 4;
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-start: 2;
+  grid-row-end: 4;
 }
 
 #card2 {
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 4;
-    grid-row-end: 5;
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-start: 4;
+  grid-row-end: 5;
 }
 
 #card3 {
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 3;
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
 }
 
 #card4 {
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row-start: 3;
-    grid-row-end: 5;
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 5;
+}
+.ProgressPage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+.ProgressPage h1 {
+  margin-bottom: 20px;
+}
+.ProgressPage ul {
+  margin-top: 20px;
+}
+.ProgressPage li {
+  margin-bottom: 10px;
+}
+.progress {
+  height: 30px;
+  width: 100%;
+}
+.progress-bar {
+  font-size: 16px;
+  font-weight: bold;
+  height: 30px;
+  line-height: 50px;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
 }
