--- a/study-app/src/App/App.css
+++ b/study-app/src/App/App.css
@@ -80,6 +80,7 @@ h4 {
   height: 100%;
   background-color: #f5f5f5;
   border-radius: 1.5%;
+  font-size: 1.5em;
 }
 
 #card1 {
@@ -108,6 +109,8 @@ h4 {
   grid-column-end: 2;
   grid-row-start: 3;
   grid-row-end: 5;
+  display: flex;
+  align-items: center;
 }
 .ProgressPage {
   display: flex;
