--- a/study-app/src/Youtube/Styles.css
+++ b/study-app/src/Youtube/Styles.css
@@ -2,7 +2,7 @@
   
     padding-bottom: 56.25%;
     position: relative;
-    height: 0;
+    /* height: 0; */
   }
   
   .video-responsive iframe {
@@ -11,5 +11,6 @@
     height: 100%;
     max-width: 100%;
     border-radius: 2%;
+    
     
   } 
